[gd_scene load_steps=7 format=3 uid="uid://cdt57b7ylyvme"]

[ext_resource type="Script" path="res://ui/aquarium_panel/aquarium_panel.gd" id="1_ljwbi"]
[ext_resource type="PackedScene" uid="uid://dhrik4pv7rpvy" path="res://ui/aquarium_panel/aquarium_values_container/aquarium_values_container.tscn" id="2_4hfi1"]
[ext_resource type="PackedScene" uid="uid://b0b4pvrucoqja" path="res://ui/aquarium_panel/entities_rows_container/entities_rows_container.tscn" id="3_bi0rr"]
[ext_resource type="PackedScene" uid="uid://0i1yalsu10vw" path="res://ui/aquarium_panel/money_value_container/money_value_container.tscn" id="4_jg74u"]
[ext_resource type="PackedScene" uid="uid://cll8xv4elcyht" path="res://ui/aquarium_panel/happiness_hover/happiness_hover.tscn" id="6_jh7li"]
[ext_resource type="PackedScene" uid="uid://bjp3i1kvjutyw" path="res://ui/aquarium_panel/happiness_hover/feature_happiness_display/feature_happiness_display.tscn" id="7_52n1t"]

[node name="AquariumPanel" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 1
script = ExtResource("1_ljwbi")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 5

[node name="AquariumValuesContainer" parent="GridContainer" instance=ExtResource("2_4hfi1")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="Expand" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EntitiesHappinessContainer" parent="GridContainer" instance=ExtResource("3_bi0rr")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Expand2" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MoneyValueContainer" parent="GridContainer" instance=ExtResource("4_jg74u")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="AquariumValuesHover" type="PanelContainer" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ConstantsDescription" type="RichTextLabel" parent="GridContainer/AquariumValuesHover"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 8
text = "Blabla description a compl√©ter par Hiily

Oxygen:
Quality:
Beauty:"

[node name="Expand5" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HappinessHover" parent="GridContainer" instance=ExtResource("6_jh7li")]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
feature_happiness_display_scene = ExtResource("7_52n1t")

[node name="Expand4" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MoneyHover" type="PanelContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
